--- a/index.html
+++ b/index.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JBL - Live Loud</title>
+  <link rel="stylesheet" href="C:\xampp\htdocs\vpesa\style.csssit">
 </head>
 <body>
-    <h1>Lorem ipsum</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, doloribus! Ad inventore consequuntur, distinctio natus beatae repellat, iure aperiam ex nulla autem nesciunt veritatis ipsa doloremque laboriosam laudantium enim aliquam.</p>
-    <H1>AI impact on society</H1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, voluptatem odit tenetur optio vero natus esse aliquam voluptas itaque reprehenderit repudiandae, voluptatibus explicabo consectetur hic ducimus culpa atque, voluptates velit.</p>
-    <link href="https://www.google.com/">
-    <a href="https://www.google.com/imgres?q=star&imgurl=https%3A%2F%2Ft3.ftcdn.net%2Fjpg%2F01%2F21%2F64%2F88%2F360_F_121648819_ZQ0tZ6tjLzxim1SG7CQ86raBw4sglCzB.jpg&imgrefurl=https%3A%2F%2Fwww.sugnaux.swiss%2FBrowse-8-453-297-Stock-Photos-Vectors-and-Video-1103736.html&docid=jq7Vz7RkkXh_fM&tbnid=Hx75r993bL9UeM&vet=12ahUKEwin0YO4uNGFAxXYhP0HHRYYAoEQM3oECBUQAA..i&w=360&h=360&hcb=2&ved=2ahUKEwin0YO4uNGFAxXYhP0HHRYYAoEQM3oECBUQAA"></a>
-    <h1><span style="color: blue;">This is a blue heading</span></h1>
-<p style="color: red;">This is a red paragraph</p>
+  <header>
+    <h1><img src="C:\xampp\htdocs\vpesa\images\download (1).png" alt="JBL Logo"> </h1>
+    <p>Live Loud</p>
+  </header>
 
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About JBL</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="technology.html">JBL Technology</a></li>
+      <li><a href="news.html">News & Events</a></li>
+      <li><a href="support.html">Support</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+  </nav>
+
+  <section class="hero">
+    <img src="C:\xampp\htdocs\vpesa\images\enjoyment of music.jpeg" alt=>
+    <h2>Experience sound that moves you.</h2>
+    <a href="products.html">Explore Products</a>
+  </section>
+
+  <section class="featured-products">
+    <h2>Featured Products</h2>
+    <div class="product-card">
+      <img src="C:\xampp\htdocs\vpesa\images\charge 5 featured.jpeg" alt=>
+      <h4>Portable Bluetooth Speaker</h4>
+      <p>Crystal clear sound, wherever you go.</p>
+      <a href="#">Learn More</a>
+    </div>
+    <div class="product-card">
+      <img src="C:\xampp\htdocs\vpesa\images\headphones lineup.jpeg" alt=>
+      <h4>Wireless Noise-Cancelling Headphones</h4>
+      <p>Immerse yourself in your music.</p>
+      <a href="#">Learn More</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; JBL 2024</p>
+  </footer>
 </body>
 </html>
