--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JBL - Live Loud</title>
-  <link rel="stylesheet" href="C:\xampp\htdocs\vpesa\style.csssit">
+  <link rel="stylesheet" href="C:\xampp\htdocs\vpesa\style.css">
 </head>
 <body>
   <header>
@@ -49,5 +49,6 @@
   <footer>
     <p>&copy; JBL 2024</p>
   </footer>
+ 
 </body>
 </html>
